feat(auth): Start auth functionality
- add auth routes - signin, register
- add auth middleware
- add protected tasks REST
