# src/controllers/users.controller.ts
@@ -1,17 +1,27 @@
 import type { IncomingMessage } from "node:http";
+import bcrypt from "bcrypt";
+import jwt from "jsonwebtoken";
 
 import { HTTP_STATUS, type RequestContext } from "../modules/router/index.ts";
 import type { CreateUserPayload } from "../repositories/user.repository.ts";
 import * as repository from "../repositories/user.repository.ts";
 import { handleError } from "../utils/http.ts";
-import { type Response } from "../modules/router/index.ts";
+import { type ResponseMod } from "../modules/router/types.ts";
+import { config } from "../config.ts";
+import type { User } from "../entities/User.ts";
 
-export const createUser = (
+export type JwtType = {
+  user: User;
+};
+
+type RegisterPayload = CreateUserPayload;
+
+export const register = (
   _req: IncomingMessage,
-  res: Response,
+  res: ResponseMod,
   { body }: RequestContext,
 ) => {
-  const payload = body as CreateUserPayload;
+  const payload = body as RegisterPayload;
 
   repository.createUser(payload, function (err, user) {
     if (err) {
@@ -22,5 +32,42 @@ export const createUser = (
       "Content-Type": "application/json",
     });
     res.end(JSON.stringify({ user: user }));
+  });
+};
+
+type SignInPayload = CreateUserPayload;
+
+export const signIn = (
+  _req: IncomingMessage,
+  res: ResponseMod,
+  { body }: RequestContext,
+) => {
+  const payload = body as SignInPayload;
+
+  repository.getUserSensitiveByEmail(payload.email, function (err, user) {
+    if (err) {
+      return handleError(res, err);
+    }
+
+    bcrypt.compare(payload.password, user.password).then((isPasswordMatch) => {
+      if (!isPasswordMatch) {
+        res.writeHead(HTTP_STATUS.unauthorized, {
+          "Content-Type": "application/json",
+        });
+        res.end(JSON.stringify({ message: "Invalid credentials" }));
+        return;
+      }
+
+      const token = jwt.sign(
+        { user: repository.omitSensitiveUserProps(user) },
+        config.jwt.secret,
+        {
+          expiresIn: config.jwt.expiresIn,
+        },
+      );
+
+      res.writeHead(200, { "Content-Type": "application/json" });
+      res.end(JSON.stringify({ token: token }));
+    });
   });
 };
