# src/routes/users.routes.ts
@@ -1,11 +1,16 @@
-import { createUser } from "../controllers/users.controller.ts";
+import { register, signIn } from "../controllers/users.controller.ts";
 import { HTTP_METHODS } from "../modules/router/const.ts";
 import type { Route } from "../modules/router/types.ts";
 
 export const routes: Route[] = [
   {
-    path: "/users",
+    path: "/users/register",
     method: HTTP_METHODS.POST,
-    handler: createUser,
+    handler: register,
+  },
+  {
+    path: "/users/signin",
+    method: HTTP_METHODS.POST,
+    handler: signIn,
   },
 ];
